[v9r3-pre13]
use DIRAC v6r21-pre3

* fixed LogSE
* LogUpload: dynamically generate the log https URL
* failing test when deprecated method is called
* passing an env may be necessary
* lb-run from LbEnv should create fully isolated environment
* passing in the environment
* bug fix @@
* corrected PYTHONPATH
* bug fix
* CMT -> binary tag
* added ReplaceLHCbDIRACCode command
* sourcing in current process environment
* finding LbLogin environment
* failing if needs to fail
* just style
* env can be None
* getting env from lhcbdirac bashrc
* use LbEnv for tests

[v9r3-pre12]
use DIRAC v6r20p25

* allowing more than 1 type of simulation productions

[v9r3-pre11]
use DIRAC v6r20p23

* fix index name
* using the production ID as index name

[v9r3-pre10]
use DIRAC v6r20p22

* using not strings but dicts
* no need for json
* dict no string
* sending a dict, and corrected typeName
* handle case of non existing index
* moved to pytest
* moved to pytest
* return value
* bug fixes
* Fixes for index name
* minor bug fix
* using old version
* just debug
* fix
* setting correctly the binary tag

[v9r3-pre9]
use DIRAC v6r20p22

* fix typos
* restored tests
* fixes
* pip install LbPlatformUtils
* adding functions from base module
* getQueues from vanilla DIRAC module

[v9r2p13]
use DIRAC v6r20p26

* fixed LogSE
* LogUpload: dynamically generate the log https URL

[v9r2p12]
use DIRAC v6r20p25

* allowing more than 1 type of simulation productions
* fix typos
* fix pylint issues
* make python 3 compatible
* allow to create POOL XML catalog

[v9r3-pre8]
use DIRAC v6r20p21

* hiding for test
* some bug fixes in recognizing compatibility, + unit test
* fix code style
* fix integration test
* fix case when platform is a list
* simplifications
* removed duplicate test
* temporarily removed
* tests updates and corrections
* fix the documentum format
* document how to handle table partitions
* momentarily hide
* avoid import errors on voboxes
* large simplifications