@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r3-pre14
+  {
+    Modules = LHCbDIRAC:v9r3-pre14, LHCbWebDIRAC:v4r5p1
+    Depends = DIRAC:v6r21-pre3
+    LcgVer = v14r5
+  }
+
   v9r3-pre13
   {
     Modules = LHCbDIRAC:v9r3-pre13, LHCbWebDIRAC:v4r5p1
